Make real dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "TSLint config for TypeScript projects at Sourcegraph",
   "main": "tslint.json",
-  "devDependencies": {
+  "dependencies": {
     "rxjs-tslint-rules": "^2.1.6",
     "tslint": "^5.7.0",
     "typescript": "^2.5.2"
