--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "2.0.1",
   "description": "TSLint config for TypeScript projects at Sourcegraph",
   "main": "tslint.json",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sourcegraph/tslint-config"
+  },
+  "keywords": [
+    "tslint",
+    "config",
+    "rules",
+    "lint",
+    "typescript"
+  ],
   "dependencies": {
     "rxjs-tslint-rules": "^2.1.6",
     "tslint": "^5.7.0",
