--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "typescript"
   ],
   "dependencies": {
+    "prettier": "^1.7.4",
     "rxjs-tslint-rules": "^2.1.6",
-    "tslint": "^5.7.0",
+    "tslint": "^5.8.0",
+    "tslint-config-prettier": "^1.6.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.2.0",
-    "typescript": "^2.5.2"
+    "typescript": "^2.6.1"
   }
 }
