--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "lint",
     "typescript"
   ],
+  "scripts": {
+    "prettier": "prettier --config node_modules/@sourcegraph/prettierrc/.prettierrc --list-different --write tslint.json"
+  },
   "dependencies": {
-    "prettier": "^1.7.4",
     "rxjs-tslint-rules": "^2.1.6",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.2.0",
     "typescript": "^2.6.1"
+  },
+  "devDependencies": {
+    "@sourcegraph/prettierrc": "^1.0.0",
+    "prettier": "^1.7.4"
   }
 }
