--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "prettier": "prettier --list-different --write tslint.json"
   },
   "dependencies": {
-    "rxjs-tslint-rules": "^2.1.6",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-plugin-prettier": "^1.3.0",
@@ -27,6 +26,7 @@
   },
   "devDependencies": {
     "@sourcegraph/prettierrc": "^1.0.0",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "rxjs-tslint-rules": "^3.1.1"
   }
 }
