--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "prettier --list-different --write tslint.json"
   },
   "dependencies": {
+    "rxjs-tslint-rules": "^3.1.1",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-plugin-prettier": "^1.3.0",
@@ -26,7 +27,6 @@
   },
   "devDependencies": {
     "@sourcegraph/prettierrc": "^1.0.0",
-    "prettier": "^1.7.4",
-    "rxjs-tslint-rules": "^3.1.1"
+    "prettier": "^1.7.4"
   }
 }
