--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   "scripts": {
     "prettier": "prettier --list-different --write tslint.json"
   },
+  "peerDependencies": {
+    "tslint": "^5.8.0"
+  },
   "dependencies": {
-    "rxjs": "^5.5.2",
-    "rxjs-tslint-rules": "^3.1.1",
-    "tslint": "^5.8.0",
+    "rxjs-tslint-rules": "^3.3.0",
     "tslint-config-prettier": "^1.6.0",
-    "tslint-react": "^3.2.0",
-    "typescript": "^2.6.2"
+    "tslint-react": "^3.2.0"
   },
   "devDependencies": {
-    "@sourcegraph/prettierrc": "^1.0.0",
-    "prettier": "^1.7.4"
+    "@sourcegraph/prettierrc": "^2.1.0",
+    "prettier": "1.9.2"
   }
 }
