use tslint rules for React hooks linting
Uses https://github.com/Gelio/tslint-react-hooks for linting React hooks code to find common mistakes, as recommended by https://reactjs.org/docs/hooks-rules.html.

Addresses https://github.com/sourcegraph/sourcegraph/pull/3392#discussion_r275895266.

Note: We plan to switch from TSLint to ESLint soon (https://github.com/sourcegraph/sourcegraph/issues/2461). In that case, we will use the more standard ESLint rules for React hooks instead.

Confirmed working; if I add a `useEffect` in an if-statement, it reports:

```
/home/sqs/src/github.com/sourcegraph/sourcegraph/shared/src/components/linkPreviews/WithLinkPreviews.tsx:27:9
ERROR: 27:9     react-hooks-nesting               A hook cannot appear inside an if statement
```

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "rxjs-tslint-rules": "^4.23.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.0.0"
+    "tslint-react": "^4.0.0",
+    "tslint-react-hooks": "^2.1.0"
   },
   "devDependencies": {
     "@sourcegraph/prettierrc": "^2.2.0",
